[gd_scene load_steps=13 format=3 uid="uid://rcpqfanm0w6q"]

[ext_resource type="Script" uid="uid://dc6lp3kclhk51" path="res://examples/dice_roler/dice_roller_example.gd" id="1_2c8eh"]
[ext_resource type="Script" uid="uid://dsiemp3pev01o" path="res://addons/dice_roller/dice_roller_control/dice_roller_control.gd" id="2_v500g"]
[ext_resource type="Script" uid="uid://cohd4ovwrydr0" path="res://addons/dice_roller/dice_def.gd" id="3_ro3eo"]
[ext_resource type="Texture2D" uid="uid://bbettxwvmopka" path="res://addons/dice_roller/dice/d6_dice/d6_dice.svg" id="4_8808l"]
[ext_resource type="Script" uid="uid://xsgh2gwr4gub" path="res://addons/dice_roller/dice_shape.gd" id="4_vgrh7"]
[ext_resource type="PackedScene" uid="uid://ckylb177r5dm5" path="res://examples/dice_roler/dice_set_editor.tscn" id="6_er2o7"]

[sub_resource type="Resource" id="Resource_pu8hq"]
script = ExtResource("4_vgrh7")
name = "D6"

[sub_resource type="Resource" id="Resource_7x16n"]
script = ExtResource("3_ro3eo")
name = "purple"
color = Color(0.40871, 0.391414, 1, 1)
shape = SubResource("Resource_pu8hq")
sides = 0

[sub_resource type="Resource" id="Resource_w6o4x"]
script = ExtResource("4_vgrh7")
name = "D8"

[sub_resource type="Resource" id="Resource_egpxp"]
script = ExtResource("3_ro3eo")
name = "red"
color = Color(1, 0.211765, 0.160784, 1)
shape = SubResource("Resource_w6o4x")
sides = 0

[sub_resource type="Resource" id="Resource_nhdwe"]
script = ExtResource("4_vgrh7")
name = "D10"

[sub_resource type="Resource" id="Resource_n4ev2"]
script = ExtResource("3_ro3eo")
name = "yellow"
color = Color(0.980392, 0.764706, 0, 1)
shape = SubResource("Resource_nhdwe")
sides = 0

[node name="DiceRollerExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2c8eh")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceRollerControl" type="SubViewportContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource("2_v500g")
dice_set = Array[ExtResource("3_ro3eo")]([SubResource("Resource_7x16n"), SubResource("Resource_egpxp"), SubResource("Resource_n4ev2")])

[node name="Labels" type="HFlowContainer" parent="Layout"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Layout/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DicesLabel" type="Label" parent="Layout/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="RollButton" type="Button" parent="Layout/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Roll"

[node name="QuickRollButton" type="Button" parent="Layout/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Quick Roll"

[node name="EditDiceSetButton" type="Button" parent="Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dice Set"
icon = ExtResource("4_8808l")

[node name="DiceSetEditor" parent="." instance=ExtResource("6_er2o7")]
visible = false

[connection signal="roll_finnished" from="Layout/DiceRollerControl" to="." method="_on_dice_roller_control_roll_finnished"]
[connection signal="roll_started" from="Layout/DiceRollerControl" to="." method="_on_dice_roller_control_roll_started"]
[connection signal="pressed" from="Layout/Buttons/RollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="Layout/Buttons/QuickRollButton" to="." method="_on_quick_roll_button_pressed"]
[connection signal="pressed" from="Layout/Buttons/EditDiceSetButton" to="." method="_on_edit_dice_set_button_pressed"]
[connection signal="confirmed" from="DiceSetEditor" to="." method="_on_dice_set_editor_confirmed"]
